# myNotes

./: README.md
data-engr-notes/: README.md  fundamentals.md
docker-notes/: README.md  docker-hands-on-devops.md
gemini-notes/: README.md  basics.md
git-notes/: README.md  essentials.md
osint-notes/osint-for-hackers-and-investigators/: 01-introduction.md  02-sock-puppets.md  03-data-collection.md  04-advanced-searching.md  05-reverse-searching.md  06-people-searching.md  (+2 more)
playwright-notes/: README.md  playwright-python-pytest.md
python-notes/: README.md  code-safety-and-testing.md  data-and-apis.md  essentials.md
python-notes/practice/code-safety-and-testing/pytest-practice/: main.py  pyproject.toml
python-notes/practice/code-safety-and-testing/pytest-practice/src/mock_database/: main.py
python-notes/practice/code-safety-and-testing/pytest-practice/src/mock_weather/: main.py
python-notes/practice/code-safety-and-testing/pytest-practice/src/prime/: main.py
python-notes/practice/code-safety-and-testing/pytest-practice/src/user_manager/: main.py
python-notes/practice/code-safety-and-testing/pytest-practice/src/weather/: main.py
python-notes/practice/code-safety-and-testing/pytest-practice/tests/: test_add_divide_main.py  test_add_main.py  test_api_typicode.py  test_mock_database_main.py  test_mock_weather_main.py  test_prime_main.py  test_user_manager_main.py  test_weather_main.py
sql-notes/: README.md  sql-for-de.md
vscode-notes/: README.md  note-taking.md
web-fundamentals-notes/: README.md  auth.md  chrome-devtools.md  html-css.md  http.md
(+23 files in other folders)
