[project]
name = "pytest-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
    "requests>=2.34.2",
]

[tool.pytest.ini_options]
# This line tells pytest to add the root folder to the Python path
pythonpath = ["."]
# Common pytest flags (shows extra info, runs in headed mode by default if you want)
addopts = "-v --tb=short"
testpaths = ["tests"]
